--- a/FitnessApp/app/App_Resources/Android/AndroidManifest.xml
+++ b/FitnessApp/app/App_Resources/Android/AndroidManifest.xml
@@ -17,11 +17,12 @@
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 	<application
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
-		android:icon="@drawable/icon"
+		android:icon="@drawable/icon_new"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme">
 
