--- a/FitnessApp/app/App_Resources/Android/app.gradle
+++ b/FitnessApp/app/App_Resources/Android/app.gradle
@@ -20,4 +20,8 @@ android {
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
   }  
+
+  project.ext {
+    googlePlayServicesVersion = "15.0.+"
+  }
 } 
