--- a/FitnessApp/package.json
+++ b/FitnessApp/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser-dynamic": "~5.2.0",
     "@angular/router": "~5.2.0",
     "nativescript-angular": "~5.2.0",
-    "nativescript-social-login": "^4.0.0",
+    "nativescript-plugin-firebase": "^5.3.1",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.5.2",
-    "tns-core-modules": "~3.4.0",
+    "tns-core-modules": "^4.0.0",
     "zone.js": "~0.8.18"
   },
   "devDependencies": {
