--- a/FitnessApp/package.json
+++ b/FitnessApp/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~5.2.0",
     "@angular/platform-browser-dynamic": "~5.2.0",
     "@angular/router": "~5.2.0",
+    "g": "^2.0.1",
+    "nativescript": "^4.0.1",
     "nativescript-angular": "~5.2.0",
     "nativescript-plugin-firebase": "^5.3.1",
     "nativescript-theme-core": "~1.0.4",
